; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_context.c_gl_tfb_primitive_type_from_d3d.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_context.c_gl_tfb_primitive_type_from_d3d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @gl_tfb_primitive_type_from_d3d to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gl_tfb_primitive_type_from_d3d(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @gl_primitive_type_from_d3d(i32 %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  switch i32 %7, label %11 [
    i32 133, label %8
    i32 135, label %9
    i32 134, label %9
    i32 136, label %9
    i32 137, label %9
    i32 130, label %10
    i32 129, label %10
    i32 128, label %10
    i32 131, label %10
    i32 132, label %10
  ]

8:                                                ; preds = %1
  store i32 133, i32* %2, align 4
  br label %13

9:                                                ; preds = %1, %1, %1, %1
  store i32 137, i32* %2, align 4
  br label %13

10:                                               ; preds = %1, %1, %1, %1, %1
  store i32 132, i32* %2, align 4
  br label %13

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %11, %10, %9, %8
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @gl_primitive_type_from_d3d(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
